--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="_0">0</string>
     <string name="count">count</string>
     <string name="hello">Hello!</string>
+    <string name="this_is_an_edit_text">This is an edit text</string>
 </resources>
